# entari-plugin-koishi

./: .gitignore  .gitmodules  entari.yml  koishi.yml  prek.toml  pyproject.toml
.github/workflows/: pyright.yml  release.yml  ruff.yml
src/entari_plugin_koishi/: __init__.py  config.py  log.py  service.py
