[project]
name = "entari-plugin-koishi"
version = "0.1.0"
description = "A plugin for Entari that integrates with Koishi."
authors = [
    { name = "Komorebi", email = "mute231010@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = []

requires-python = ">=3.10"
dependencies = [
    "arclet-entari[yaml]>=0.17.4",
    "koishi-python",
]

[project.urls]
homepage = "https://github.com/entanex/entari-plugin-koishi"
repository = "https://github.com/entanex/entari-plugin-koishi"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.uv.sources]
koishi-python = { git = "https://github.com/koishipy/koishi-python" }

[tool.ruff]
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"

typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["uv_build >=0.8.3, <0.9.0"]
build-backend = "uv_build"
